--- a/src/App.css
+++ b/src/App.css
@@ -107,5 +107,9 @@ div.footer {
 }
 
 div.footer div {
-  margin-top: 30px;
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  background-color: #fcfcfc;
+  padding: 20px;
 }
