--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-div.App div.ui.stackable.grid.container {
+div.App div.page-padding-bottom {
   padding-bottom: 8rem !important;
 }
 
@@ -113,4 +113,5 @@ div.footer {
   width: 100%;
   background-color: #fcfcfc !important;
   padding: 10px !important;
+  z-index: 5;
 }
